# src/api/v1/users/users.go
@@ -1,4 +1,4 @@
-package students
+package users
 
 import (
 	"context"
